# harness-engineering

./: AGENTS.md  Makefile  README.md  cli.py  harness_config.yaml  model_config.yaml  monitoring_config.yaml  monitoring_rules.yaml  observability_config.yaml  pyproject.toml  requirements.txt  security_config.yaml
docs/: architecture.md  edge_cases.md  quality.md  requirements.md  uncertain_terms.md
harness/: config.py  gate.py
harness/agents/: architecture_agent.py  base_agent.py  dev_agent.py  gc_agent.py  qa_agent.py  release_agent.py  requirements_agent.py  self_review_agent.py
harness/constraints/: validators.py
harness/logs/: conflict_log.py  decision_log.py
harness/model/: __init__.py  anthropic_model.py  base_model.py  openai_model.py  prompt_registry.py
harness/monitoring/: __init__.py  action_runner.py  base_adapter.py  ingestor.py  log_event.py  log_monitor_agent.py
harness/monitoring/adapters/: __init__.py  (+4 more)
harness/observability/: __init__.py  aggregator.py  budget.py  dashboard.py  metrics.py
harness/runner/: __init__.py  checkpoint.py  parallel_runner.py  pipeline.py
harness/security/: __init__.py  log_signer.py  sanitiser.py  secrets_scanner.py
policies/: conflict_policy.yaml  policy.yaml  rollback_triggers.yaml
prompts/: architecture_agent.md  gc_agent.md  orchestrator_agent.md  requirements_agent.md  self_review_agent.md
scripts/: setup_env.sh
tests/: test_constraints.py  test_model_layer.py  test_monitoring.py  test_observability.py  test_runner.py  test_security.py  test_self_review.py
tests/scenarios/: test_scenarios.yaml
